# hse-ai-test

./: eda.ipynb  pyproject.toml
